# MonteCarloLocalisation

./: README.md
pink_fundamentals/: CMakeLists.txt  gold.txt  map.txt  package.xml
pink_fundamentals/include/package/: PID_lib.hpp  songs_lib.hpp
pink_fundamentals/launch/: driver.launch  localisation.launch  localisation_try.launch  moving.launch  planning.launch  smooth.launch
pink_fundamentals/msg/: ExactPose.msg
pink_fundamentals/src/: PID_drive.cpp  align_server.cpp  avf.cpp  avf_wanderer.cpp  executeChallenge.cpp  execute_plan_server.cpp  monte_carlo.cpp  moveToPosition_server.cpp  playground.cpp  potential_field.cpp  publish_map.py  publish_map_rviz.cpp  songs_lib.cpp  wanderer.h  wanderer_try_final.cpp
pink_fundamentals/srv/: DistanceToNode.srv  ExecutePlan.srv  PID_drive.srv  Wanderer.srv  play_song.srv
